Reapply "Dark mode fixes"
This reverts commit 41ee0e92039f56671529e5b0a620e70eb9fa65af.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -258,6 +258,10 @@ a {
   transition: color var(--transition-fast);
 }
 
+a:visited {
+  color: var(--color-primary);
+}
+
 a:hover {
   color: var(--color-primary-dark);
   text-decoration: underline;
